remove server side pdf generation fix logging out go to /app when getting 403 dont let writing tribute annonomasly for yourself. in topics only show the top three for each topic. add leave team option fix inviting a not registred user add accept invitation
